tests/machine/x/fs/avg_builtin.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/avg_builtin.fs(3,15): error FS0003: This value is not a function and cannot be applied
